--- a/app/views/home.html
+++ b/app/views/home.html
@@ -31,7 +31,10 @@
                 <h3 align=center>This Month's Promotions</h3>
             </div>
             <div class="col-xs-12 col-sm-9">
-				<div class="media">
+				<div ng-if="!showPromo">
+                    <h3>{{promoMessage}}</h3>
+                </div>
+                <div class="media" ng-if="showPromo">
                     <div class="media-body">
                         <h2 class="media-heading">{{featPromotion.name}} <span class="label label-danger">{{featPromotion.label}}</span></h2>
                         <p>{{featPromotion.description}}</p>
@@ -52,7 +55,10 @@
                 <h3 align=center>Meet our Culinary Specialists</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-				<div class="media">
+				<div ng-if="!showLeader">
+                    <h3>{{leaderMessage}}</h3>
+                </div>
+                <div class="media" ng-if="showLeader">
                     <div class="media-left media-middle">
                         <a href="#">
                         <img class="media-object img-thumbnail"
