--- a/app/views/contactus.html
+++ b/app/views/contactus.html
@@ -87,7 +87,8 @@
                              class="help-block">Enter a valid email address.</span>
 						</div>
                     </div>
-                    <div class="form-group"  ng-class="{ 'has-error' : invalidChannelSelection }">                       <div class="checkbox col-sm-5 col-sm-offset-2">
+                    <div class="form-group"  ng-class="{ 'has-error' : invalidChannelSelection }">                       
+                        <div class="checkbox col-sm-5 col-sm-offset-2">
                             <label class="checkbox-inline">
                                 <input type="checkbox"
                                 ng-model="feedback.agree">
