--- a/app/views/dishdetail.html
+++ b/app/views/dishdetail.html
@@ -71,7 +71,9 @@
                     </div> 
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-primary" ng-disabled="commentForm.$invalid">Submit Comment</button>
+                            <button type="submit" class="btn btn-primary" ng-disabled="commentForm.$invalid">
+                                Submit Comment
+                            </button>
                         </div>
                     </div>
                 </form>
